# CDIONavigation

./: CMakeLists.txt  CourseObject.cpp  config.json  main.cpp
Simulator/: CMakeLists.txt  SimulatedRobot.cpp  SimulatedRobot.h  Simulator.cpp  Simulator.h  TextureLocations.h  main.cpp
Simulator/Objects/: Ball.cpp  Ball.h  Cross.cpp  Cross.h  Egg.cpp  Egg.h  SimulatedRobot.cpp  SimulatedRobot.h
src/: CMakeLists.txt  Client.cpp  Client.h  Command.cpp  Command.h  CourseObject.cpp  CourseObject.h  EnvVariables.h  MainController.cpp  MainController.h  NavigationController.cpp  NavigationController.h  PythonBinding.cpp  main.cpp
src/Controllers/: Client.cpp  Client.h  ClientController.cpp  ClientController.h  ImageProcessorController.cpp  ImageProcessorController.h  MainController.cpp  MainController.h  MathUtil.cpp  MathUtil.h  NavigationController.cpp  NavigationController.h  ObjectCounter.cpp  ObjectCounter.h
src/Controllers/Clients/: IClient.h  LinuxClient.cpp  LinuxClient.h  MockClient.cpp  MockClient.h
src/Controllers/ImageProcessing/: BallProcessor.cpp  BallProcessor.h  CloudyImageProcessor.cpp  CloudyImageProcessor.h  IBallProcessor.h  ImageProcessor.cpp  ImageProcessor.h  WallProcessor.cpp  WallProcessor.h
src/Models/: BlockingObject.cpp  BlockingObject.h  Command.cpp  Command.h  CourseObject.cpp  CourseObject.h  Egg.cpp  Egg.h  JourneyModel.h  Vector.cpp  Vector.h  VectorToBlockingObject.cpp  VectorToBlockingObject.h  VectorWithStartPos.cpp  VectorWithStartPos.h
tests/: BallDectectionTests.cpp  CMakeLists.txt  FrontBackDetectionTests.cpp  NavigationControllerTests.cpp  NavigationControllerTests.h  TestBallProcessor.cpp  TestBallProcessor.h
